--- a/public/style.css
+++ b/public/style.css
@@ -1,30 +1,22 @@
 body {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
-}
-
-h1,h2,h3,h4 {
-    text-align:center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .allergies{
-    font-family: Georgia, 'Times New Roman', Times, serif
-}
-
-#gluten, #lactose {
-    color: red;
-}
-
-#burgerselection {
-    background-color: black;
-    color: white;
+    font-weight: bold;
 }
 
 button {
-    margin-top: 15px;
+    margin: 10px 15px;
+    text-align: center;
+    border-style:hidden;
+    border-radius:5%;
+    padding:5px 10px;
 }
 
 button:hover {
     background-color: rgb(12, 201, 12);
+    cursor:pointer;
  }
 
 header, section {
@@ -35,6 +27,7 @@ section {
     border-style:dashed;
     border-radius: 20px;
     }
+
 section > p, form {
     margin-left: 15px;
 }
@@ -46,9 +39,31 @@ div {
 
 #headpic {
     opacity: 0.8;
+    width: 100%;
+    height: auto;
 }
 
 header {
-    height: 500px;
+    height: 600px;
     overflow:hidden;
+}
+
+.menu {
+    background-color: black;
+    color: white;
+}
+
+.item {
+    margin: 50px;
+}
+
+.wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
